--- a/app/src/main/res/layout/item_password.xml
+++ b/app/src/main/res/layout/item_password.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/name"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
