--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addPassword"
         android:layout_margin="20dp"
+        android:src="@mipmap/ic_action_content_add"
         android:layout_gravity="bottom|right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
