--- a/app/src/main/res/layout/activity_view_password.xml
+++ b/app/src/main/res/layout/activity_view_password.xml
@@ -8,37 +8,23 @@
         android:textColor="@android:color/black"
         android:textSize="30sp"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
+        android:layout_margin="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:visibility="gone"
         android:id="@+id/passwordTextView"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
+        android:layout_margin="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:padding="10dp"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/showButton"
-            android:layout_margin="10dp"
-            android:layout_gravity="center"
-            android:text="@string/show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/copyButton"
-            android:layout_margin="10dp"
-            android:layout_gravity="center"
-            android:text="@string/copy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/password2TextView"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
+        android:layout_gravity="center"
+        android:layout_margin="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
