--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:padding="20dp"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
-
     <EditText
         android:id="@+id/password"
         android:inputType="textPassword"
@@ -23,7 +22,7 @@
     <Button
         android:id="@+id/login"
         android:text="@string/login"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/dropbox"
