Overhaul App and Integrate Google Drive instead of Dropbox

--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -112,7 +112,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/updateButton"
         android:layout_margin="20dp"
         android:layout_gravity="bottom|right"
